--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </div>
     <div class="portcovdes">I've also include a portfolio cover I made myself!</div>
     <div class="mascot">
-        And lastly, this is my design of a mascot I envisioned. It's a starfish with a donut as a lifebuoy. 
+        And lastly, this is my design of a mascot I envisioned. It's a starfish with a donut as a lifebuoy.🦺
     </div>
 </body>
 </html>
