--- a/index.html
+++ b/index.html
@@ -60,5 +60,8 @@
     <div class="mascot">
         And lastly, this is my design of a mascot I envisioned. It's a starfish with a donut as a lifebuoy.🦺
     </div>
+    <div class="mcp">
+        <img src="./assets/mascot.png" alt="mascot">
+    </div>
 </body>
 </html>
